# Tufan

./: .clang-format  .clang-tidy  .clangd  .env.example  .env.testing  CMakeLists.txt  Makefile  main.cc
.github/workflows/: ci.yml  tests.yml
config/: logging.cc
engine/: Tufan.hh
engine/configuration/: EnvParser.cc  EnvParser.hh  IConfig.hh  Repository.hh
engine/console/: Command.hh  Kernel.cc  Kernel.hh  Parser.cc  Parser.hh
engine/exceptions/: Exceptions.hh  Handler.cc  Handler.hh  config_exceptions.hh  foundation_exceptions.hh
engine/facades/: Config.hh  Facade.hh  Logger.hh  Registry.hh
engine/foundation/: Application.cc  Application.hh  Binding.hh  Container.cc  Container.hh  IApplication.hh  IContainer.hh  IProvider.hh  ReportServiceProvider.hh  ScannerServiceProvider.hh  ServiceRegistry.hh
engine/logger/: ILogger.hh  Logger.cc  Logger.hh  LoggerServiceProvider.hh
engine/services/: ServiceManager.cc  ServiceManager.hh  ServiceProvider.cc  ServiceProvider.hh
engine/testing/: TestCase.hh
engine/testing/unit/configuration/: EnvParserTest.cc  RepositoryTest.cc
engine/testing/unit/console/: ConsoleTest.cc
engine/testing/unit/exceptions/: ExceptionTest.cc
engine/testing/unit/foundation/: ApplicationTest.cc  ContainerTest.cc  RegistryTest.cc  ServiceProviderTest.cc
